--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@storybook/blocks": "^7.6.15",
     "@storybook/test": "^7.6.15",
     "@types/jasmine": "~4.3.0",
+    "angular-cli-ghpages": "^2.0.0-beta.2",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
